--- a/CNN Cancer Detection.ipynb
+++ b/CNN Cancer Detection.ipynb
@@ -492,8 +492,7 @@
    "source": [
     "## Results and Analysis\n",
     "I'm going to try training the model now. \n",
-    "Run hyperparameter tuning, try different architectures for comparison, apply techniques to improve training or performance, and discuss what helped.\n",
-    "\n",
+    "Run hyperparameter tuning, try different architectures for comparison, apply techniques to improve training or performance, and discuss what helped."
    ]
   },
   {
